--- a/DrinkWater/DrinkWater/LogReg/Registration.xaml
+++ b/DrinkWater/DrinkWater/LogReg/Registration.xaml
@@ -5,36 +5,62 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DrinkWater.LogReg"
         mc:Ignorable="d"
-        Title="Drink Water" Height="500" Width="800" Background="#E1EDFD" WindowStartupLocation="CenterScreen">
-    <Grid  HorizontalAlignment="Center" Width="800">
+        Title="Drink Water" MinHeight="480" MinWidth="500" Height="500" Width="700" WindowStartupLocation="CenterScreen">
+    <Grid Width="{Binding ActualWidth, 
+              RelativeSource = {RelativeSource AncestorType = {x:Type Window}}}" 
+      Height="{Binding ActualHeight, 
+              RelativeSource ={RelativeSource AncestorType = {x:Type Window}}}" Background="#E1EDFD">
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="0*"/>
-            <RowDefinition Height="0*"/>
+            <RowDefinition Height="0.05*"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="5 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="5 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="5 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="5 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="5 px"/>
+            <RowDefinition Height="27 px"/>
+            <RowDefinition Height="0.1*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0*"/>
-            <ColumnDefinition Width="0*"/>
-            <ColumnDefinition/>
-            <ColumnDefinition Width="0*"/>
-            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition Width="0.25*"/>
+            <ColumnDefinition Width="0.5*"/>
+            <ColumnDefinition Width="0.25*"/>
         </Grid.ColumnDefinitions>
-        <TextBox  Style="{StaticResource LoginTextBox}" x:Name="textBoxUsername" HorizontalAlignment="Center" Margin="0,105,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" Height="22" Grid.Column="2"/>
-        <TextBox  Style="{StaticResource LoginTextBox}" x:Name="textBoxEmail" HorizontalAlignment="Center" Margin="0,175,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="260" Height="22"  Grid.Column="2"/>
-        <PasswordBox  Style="{StaticResource PasswordBox}" x:Name="textBoxPassword" HorizontalAlignment="Center" Margin="0,250,0,0" Password="" VerticalAlignment="Top" Width="260" Height="22" Grid.Column="2">
 
-        </PasswordBox>
-        <PasswordBox   Style="{StaticResource PasswordBox}" x:Name="textBoxConfirmPassword" HorizontalAlignment="Center" Margin="0,325,0,0" Password="" VerticalAlignment="Top" Width="260" Height="22" Grid.Column="2"/>
-        <Button Style="{StaticResource LoginButton}" x:Name="buttonSignUp"  Background="#2C3B58" BorderBrush="Transparent"
-                BorderThickness="0" Content="Sign up" HorizontalAlignment="Left" Margin="410,399,0,0" VerticalAlignment="Top" Height="22" Width="120" Click="ButtonSignUp_Click" Grid.Column="2" FontFamily="Bahnschrift SemiBold" Foreground="White"/>
-        <Label Content="Username:" HorizontalAlignment="Left" Margin="266,79,0,0"  Width="69" Grid.Column="2" FontFamily="Bahnschrift SemiBold" Height="26" VerticalAlignment="Top"/>
-        <Label Content="Email:" HorizontalAlignment="Left" Margin="266,148,0,0"  Width="60" Grid.Column="2" FontFamily="Bahnschrift SemiBold" Height="26" VerticalAlignment="Top"/>
-        <Label Content="Password:" Margin="266,223,0,0" Grid.Column="2" FontFamily="Bahnschrift SemiBold" HorizontalAlignment="Left" Width="86" Height="26" VerticalAlignment="Top"/>
-        <Label Content="Confirm password:" Margin="266,300,0,0" Grid.Column="2" FontFamily="Bahnschrift SemiBold" HorizontalAlignment="Left" Height="26" Width="156" VerticalAlignment="Top"/>
-        <Label x:Name="labelUsername" Visibility="Hidden" Content="label" HorizontalAlignment="Left"  Margin="270,127,0,0" VerticalAlignment="Top" Grid.Column="2" Height="26" Width="365" />
-        <Label x:Name="labelEmail" Visibility="Hidden" Content="label" HorizontalAlignment="Left" Margin="270,197,0,0" VerticalAlignment="Top"  Grid.Column="2" Height="26" Width="365"   />
-        <Label x:Name="labelPassword" Visibility="Hidden" Content="Label" HorizontalAlignment="Left"  Margin="270,273,0,0" VerticalAlignment="Top"   Grid.Column="2" Height="26" Width="365"/>
-        <Label x:Name="labelPasswordConfirm" Visibility="Hidden" Content="Label" Grid.Column="2" HorizontalAlignment="Left" Margin="270,347,0,0"    VerticalAlignment="Top" Width="365" Height="26"/>
-        <Label Content=" Sign up" Grid.Column="2" HorizontalAlignment="Left" Margin="362,32,0,0" VerticalAlignment="Top" Width="108" AutomationProperties.HelpText="" FontSize="16" FontFamily="Bahnschrift SemiBold" FontStyle="Italic" FontWeight="Normal" Opacity="0.985" Height="31"/>
+        <Label Grid.Column="1" Grid.Row="1" Content="Sign up" HorizontalAlignment="Center" VerticalAlignment="Top" Width="Auto" AutomationProperties.HelpText="" FontSize="16" FontFamily="Bahnschrift SemiBold" FontStyle="Italic" FontWeight="Normal" Opacity="0.985" Height="30"/>
+
+
+        <Label Grid.Column="1" Grid.Row="3" Content="Username:" HorizontalAlignment="Left" Width="Auto" FontFamily="Bahnschrift SemiBold" Height="26" VerticalAlignment="Top"/>
+        <TextBox  Grid.Column="1" Grid.Row="4" Style="{StaticResource LoginTextBox}" x:Name="textBoxUsername" HorizontalAlignment="Stretch" Margin="3 0 0 0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Height="22"/>
+        <Label  Grid.Column="1" Grid.Row="5" x:Name="labelUsername" Visibility="Hidden" Content="label" HorizontalAlignment="Stretch"  VerticalAlignment="Top" Height="26" />
+
+        <Label Grid.Column="1" Grid.Row="7" Content="Email:" Width="Auto" FontFamily="Bahnschrift SemiBold" Height="26" VerticalAlignment="Top"/>
+        <TextBox  Grid.Column="1" Grid.Row="8" Style="{StaticResource LoginTextBox}" x:Name="textBoxEmail" HorizontalAlignment="Stretch" Margin="3 0 0 0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Height="22"/>
+        <Label  Grid.Column="1" Grid.Row="9" x:Name="labelEmail" Visibility="Hidden" Content="label" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="26"/>
+
+        <Label   Grid.Column="1" Grid.Row="11" Content="Password:" FontFamily="Bahnschrift SemiBold" HorizontalAlignment="Left" Width="Auto" Height="26" VerticalAlignment="Top"/>
+        <PasswordBox    Grid.Column="1" Grid.Row="12" Style="{StaticResource PasswordBox}" x:Name="textBoxPassword" HorizontalAlignment="Stretch" Margin="3 0 0 0" Password="" VerticalAlignment="Top" Height="22"/>
+        <Label Grid.Column="1" Grid.Row="13" x:Name="labelPassword" Visibility="Hidden" Content="Label" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="26"/>
+
+        <Label Grid.Column="1" Grid.Row="15" Content="Confirm password:" FontFamily="Bahnschrift SemiBold" HorizontalAlignment="Left" Height="26" Width="Auto" VerticalAlignment="Top"/>
+        <PasswordBox  Grid.Column="1" Grid.Row="16"  Style="{StaticResource PasswordBox}" x:Name="textBoxConfirmPassword" HorizontalAlignment="Stretch" Margin="3 0 0 0" Password="" VerticalAlignment="Top" Height="22"/>
+        <Label  Grid.Column="1" Grid.Row="17" x:Name="labelPasswordConfirm" Visibility="Hidden" Content="Label" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="26"/>
+
+
+        <Button Grid.Column="1" Grid.Row="19" Style="{StaticResource LoginButton}" x:Name="buttonSignUp"  Background="#2C3B58" BorderBrush="Transparent"
+                BorderThickness="0" Content="Sign up" HorizontalAlignment="Right" VerticalAlignment="Top" Height="22" Width="120" Click="ButtonSignUp_Click" FontFamily="Bahnschrift SemiBold" Foreground="White"/>
+
     </Grid>
 </Window>
